# db-change-control

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  README.md  db.changelog-master.yaml  docker-compose.yml  liquibase.properties  pyproject.toml
.github/workflows/: CI.yml  lint.yml  liquibase.yml
flyway/: flyway.conf
flyway/.github/workflows/: cicd.yml
liquibase/: liquibase.properties
liquibase/mutables/views/: user_roles_view.sql
liquibase/phases/phase15-sprint-1/: changelog-phase15-sprint-1.yaml
liquibase/phases/phase16-sprint-2/: changelog-phase16-sprint-2.yaml
liquibase_PoC/: README.md
liquibase_PoC/example1/: dbchangelog.yaml
liquibase_PoC/example1/schema/tables/: alter_tb_user_add_first_name.sql  roles_tb.sql  user_roles_tb.sql  users_tb.sql
liquibase_PoC/example1/schema/views/: user_roles_view.sql
liquibase_PoC/example2/: README.md  db.changelog-master.yaml  liquibase.properties
liquibase_PoC/example2/phases/phase15-sprint-1/: changelog-phase15-sprint-1.yaml
liquibase_PoC/example2/phases/phase16-sprint-5/: changelog-phase16-sprint-5.yaml
liquibase_PoC/example3/mutables/functions/: fn_insert_or_update_client.sql
liquibase_PoC/example3/phases/phase15-sprint-1/: changelog-phase15-sprint-1.yaml
mutables/functions/: fn_insert_or_update_client.sql  fn_insert_or_update_user.sql
mutables/views/: user_roles_view.sql  v_user_roles.sql
phases/phase15-sprint-1/: changelog-phase15-sprint-1.yaml
phases/phase15-sprint-1/squad1/alters/: alter_clients_adding_description.sql
phases/phase16-sprint-2/: changelog-phase16-sprint-2.yaml
(+5 files in other folders)
