[tool.poetry]
name = "liquibasepoc"
version = "0.1.0"
description = "database version control"
authors = ["Gerardo Adolfo Salas Montoya <ore395@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
appdirs = "1.4.4"
chardet = "5.2.0"
click = "8.1.7"
colorama = "0.4.6"
diff_cover = "9.0.0"
iniconfig = "2.0.0"
Jinja2 = "3.1.4"
MarkupSafe = "2.1.5"
packaging = "24.1"
pathspec = "0.12.1"
pluggy = "1.5.0"
Pygments = "2.18.0"
pytest = "8.2.2"
PyYAML = "6.0.1"
regex = "2024.5.15"
sqlfluff = "3.0.7"
tblib = "3.0.0"
tqdm = "4.66.4"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
